tests/ui/const-generics/invalid-constant-in-args.stderr
error[E0107]: struct takes 1 generic argument but 2 generic arguments were supplied
  --> $DIR/invalid-constant-in-args.rs:4:12
   |
LL |     let _: Cell<&str, "a"> = Cell::new("");
   |            ^^^^       --- help: remove this generic argument
   |            |
   |            expected 1 generic argument

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
